25-11-2025 = = Version 1.7.3 =
* New: Move to top issue resolved.

20-11-2025 = = Version 1.7.2 =
* New: Move to top issue resolved.

09-11-2025 = = Version 1.7.1 =
* New: Circular Progress bar added in move to top.
* Update: Style issue resolved.
* New: New Enable options addded in header icons.

06-10-2025 = = Version 1.7.0 =
* Update: Add to cart loading issue resolved.
* Update: Quick View in shop page issue resolved.
* Update: Wishlist, variation style updated.

30-09-2025 = = Version 1.6.9 =
* Update: Single page gallery images hover issue resolved.
* Update: Elementor addons gallery images hover issue resolved.
* Update: page footEr and header style diffrent issue resolved.
* Update: Account dark mode input box style issue resolved.
* variation product home page cart or hand icon not show.


24-09-2025 = = Version 1.6.8 =
* Update: Single page gallery images hover issue resolved.

25-08-2025 = = Version 1.6.7 =
* Update: Modification in th_shop_mania_header_transparent_class disable transparent header for inner pages should work in all pages except frontpage.
* Variation product icon add to add button.

21-08-2025 = = Version 1.6.6 =
* Update: Below footer js code commented  // Below Footer code if made any changes in footer

19-08-2025 = = Version 1.6.5 =
1. TH COMPARE INETEGRATED.
2. Style Improved
3. Tested with latest PHP 8.3 / 8.4.
4. Tested with wordpress 6.8.
5. No open code present (__load_text_domain error)
6. TH Wishlist added in Option Panel.
7. Hooks added at after & before of haeder and footer also class added in these tags.
8. Product layouts style issue resolved.
9. Update: Header implementation through hooks using do_action( 'th_shop_mania_header' );
10. Update: Footer implementation through hooks using do_action( 'th_shop_mania_footer' );
11. Update: Absolute path in th-icon issue resolved.

02-08-2025 = = Version 1.6.4 =
* Update: Move to Top and header on woocommerce deactivation issue resolved.