@@ -1,5 +1,6 @@
 25-11-2025 = = Version 1.7.3 =
 * New: Move to top issue resolved.
+* Update: Style updated.
 
 20-11-2025 = = Version 1.7.2 =
 * New: Move to top issue resolved.
